[package]
name = "greetings"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = { version="4.3", features = ["openssl"] }
env_logger = "0.10"
json = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
openssl = "0.10"
mio = "0.8.11"
mime = "0.3.17"
actix-files = "0.6.5"
async-stream = "0.3.5"