[package]
name = "greetings"
version = "0.0.2"
edition = "2021"

[dependencies]
actix-web = "4.3"
env_logger = "0.10"
json = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
reqwest = { version= "0.11.23", features = ["blocking"] }
tokio = "1.28.1"
mio = "0.8.11"
actix-http = "3.6.0"
mime = "0.3.17"
actix-files = "0.6.5"
async-stream = "0.3.5"